# jpegxl-rs

./: .gitignore  .gitmodules  .harper-dictionary.txt  .markdownlint.json  .rumdl.toml  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml  security_audit.yml
benches/: decode.rs  encode.rs
jpegxl-rs/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
jpegxl-rs/benches/: decode.rs  encode.rs
jpegxl-rs/src/: common.rs  decode.rs  encode.rs  errors.rs  image.rs  lib.rs  memory.rs  parallel.rs  tests.rs  utils.rs
jpegxl-rs/src/decode/: event.rs  result.rs  session.rs
jpegxl-rs/src/encode/: frame.rs  metadata.rs  options.rs
jpegxl-rs/src/parallel/: resizable_runner.rs  threads_runner.rs
jpegxl-rs/src/tests/: decode.rs  encode.rs
jpegxl-rs/tests/: decode.rs  encode.rs
jpegxl-src/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
jpegxl-src/src/: lib.rs
jpegxl-sys/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
jpegxl-sys/src/: bindings.rs  cms.rs  codestream_header.rs  color.rs  color_encoding.rs  common.rs  decode.rs  decoder.rs  encode.rs  encoder.rs  lib.rs  memory_manager.rs  metadata.rs  parallel_runner.rs  resizable_parallel_runner.rs  stats.rs  thread_parallel_runner.rs  threads.rs  types.rs
jpegxl-sys/src/bindings/: butteraugli.rs  common.rs  encoder.rs  memory_manager.rs  parallel_runner.rs  thread_parallel_runner.rs
jpegxl-sys/src/color/: cms.rs  cms_interface.rs  color_encoding.rs
jpegxl-sys/src/common/: memory_manager.rs  types.rs
jpegxl-sys/src/encoder/: encode.rs  stats.rs
jpegxl-sys/src/metadata/: codestream_header.rs  compressed_icc.rs  gain_map.rs
jpegxl-sys/src/threads/: parallel_runner.rs  resizable_parallel_runner.rs  thread_parallel_runner.rs
samples/: 2bit.jxl  bench.jxl  sample.exif  sample.xmp  sample_grey.jxl  sample_jpg.jxl
src/: common.rs  decode.rs  decoder.rs  encode.rs  encoder.rs  error.rs  errors.rs  image.rs  image_support.rs  lib.rs  main.rs  masking.rs  memory.rs  parallel.rs  threadpool.rs
src/bindings/: decoder.rs  mod.rs  parallel_runner.rs  resizable_parallel_runner.rs
src/parallel/: mod.rs  rayon_runner.rs  threads_runner.rs
test/: sample.jxl  sample_jpeg.jxl  sample_jpg.jxl
tests/: decode.rs  encode.rs
