[package]
authors = ["Inflation <hypernovagama@gmail.com>"]
categories = ["api-bindings", "encoding", "multimedia::images"]
description = "Safe Rust wrapper for JPEG XL reference implementation"
edition = "2018"
exclude = ["test/"]
keywords = ["jpeg-xl", "jxl"]
license = "GPL-3.0-or-later"
name = "jpegxl-rs"
readme = "README.md"
repository = "https://github.com/inflation/jpegxl-rs"
version = "0.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["image-support", "threads"]
image-support = ["image"]
system-jxl = ["jpegxl-sys/system-jxl"]
threads = ["jpegxl-sys/threads"]

[dependencies]
derive_builder = "0.10.2"
image = { version = "0.23.14", optional = true, default-features = false }
jpegxl-sys = { version = "0.6.0", path = '../jpegxl-sys' }
paste = "1.0.5"
thiserror = "1.0.30"

[dev-dependencies]
anyhow = "1.0.44"
criterion = { version = "0.3.5", features = ["html_reports"] }
image = { version = "0.23.14", default-features = false, features = [
	"jpeg",
	"png",
] }
qcms = { git = "https://github.com/FirefoxGraphics/qcms" }

[package.metadata.docs.rs]
features = ["system-jxl"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
bench = false
path = "src/lib.rs"

[[bench]]
harness = false
name = "decode"

[[bench]]
harness = false
name = "encode"
