[package]
authors = ["Inflation <hypernovagama@gmail.com>"]
categories = ["external-ffi-bindings", "encoding", "multimedia::images"]
description = "Rust wrapper for JPEG XL reference implementation"
edition = "2021"
exclude = ["test/"]
keywords = ["jpeg-xl", "jxl"]
license = "GPL-3.0-or-later"
links = "jxl"
name = "jpegxl-sys"
readme = "README.md"
repository = "https://github.com/inflation/jpegxl-sys"
version = "0.6.2-alpha0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
pkg-config = "0.3.25"
cmake = "0.1.48"
num_cpus = "1.13.1"

[dev-dependencies]
image = { version = "0.24.2", default-features = false, features = ["png"] }

[features]
default = ["threads"]
vendored = []
threads = []
