[package]
authors = ["Inflation <me@shimotsuki.ink>"]
categories = ["external-ffi-bindings", "encoding", "multimedia::images"]
description = "Rust wrapper for JPEG XL reference implementation"
edition = "2021"
keywords = ["jpeg-xl", "jxl"]
license = "GPL-3.0-or-later"
links = "jxl"
name = "jpegxl-sys"
readme = "README.md"
repository = "https://github.com/inflation/jpegxl-rs"
version = "0.12.0+libjxl-0.11.1"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[lints.clippy]
pedantic = "warn"
module_name_repetitions = "allow"

[lints.rustdoc]
broken_intra_doc_links = "deny"

[package.metadata.docs.rs]
features = ["docs"]

[build-dependencies]
pkg-config = "0.3.31"

[build-dependencies.jpegxl-src]
version = "0.11.3"
path = "../jpegxl-src"
optional = true

[dev-dependencies]
image = { version = "0.25.5", default-features = false, features = ["png"] }
pretty_assertions = "1.4.1"

[features]
default = []
vendored = ["dep:jpegxl-src"]
docs = []
